force-app/main/default/objects/HM_Subtotal__mdt/HM_Subtotal__mdt.object-meta.xml
<CustomObject>
    <label>HM_Subtotal</label>
    <pluralLabel>HM_Subtotals</pluralLabel>
</CustomObject>