force-app/main/default/objects/HM_Subtotal__mdt/fields/Negative_Message__c.field-meta.xml
<CustomField>
    <fullName>Negative_Message__c</fullName>
    <description>Message to display in health info if score is less than 0</description>
    <inlineHelpText>Message to display in health info if score is less than 0</inlineHelpText>
    <label>Negative Message</label>
    <length>120</length>
    <type>Text</type>
</CustomField>