force-app/main/default/objects/HM_Subtotal__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>HM_Subtotals</relationshipLabel>
    <relationshipName>HM_Subtotals</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>