force-app/main/default/objects/HM_Subtotal__mdt/fields/Positive_Message__c.field-meta.xml
<CustomField>
    <fullName>Positive_Message__c</fullName>
    <description>Message to display in health info if score is greater than 0</description>
    <inlineHelpText>Message to display in health info if score is greater than 0</inlineHelpText>
    <label>Positive Message</label>
    <length>120</length>
    <type>Text</type>
</CustomField>