force-app/main/default/objects/HM_Subtotal__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field</label>
    <metadataRelationshipControllingField>HM_Subtotal__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>HM_Subtotals1</relationshipLabel>
    <relationshipName>HM_Subtotals1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>