force-app/main/default/objects/HM_Subtotal__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Percent weight of total score</description>
    <inlineHelpText>Percent weight of total score</inlineHelpText>
    <label>Weight</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>