force-app/main/default/objects/HM_Subtotal__mdt/listViews/Better_All.listView-meta.xml
<ListView>
    <fullName>Better_All</fullName>
    <columns>MasterLabel</columns>
    <columns>Source_Field__c</columns>
    <columns>Negative_Message__c</columns>
    <columns>Positive_Message__c</columns>
    <columns>Weight__c</columns>
    <filterScope>Everything</filterScope>
    <label>Better All</label>
    <language>en_US</language>
</ListView>